--- a/src/index.html
+++ b/src/index.html
@@ -51,59 +51,60 @@
 <body>
   <hr class="top-hr" />
   <div class="container on">
-    <div class="screen">
+    <div>
       <h3 class="title">CONNECTION ESTABLISHED</h3>
-      <div class="box--outer">
-        <div class="box">
-          <div class="box--inner">
-            <div class="content">
-              <div class="holder">
-                <b>GHOST SQUADRON</b> Covert operations.<br /><i
-                  >- "You can't be guilty if you were never there."</i
-                >
-                <br />
-                <br />
-                <div class="row">
-                  <div class="col col__left label">Login</div>
-                  <div class="col col__center">
-                    <input
-                      type="text"
-                      id="login"
-                      maxlength="32"
-                      value="guest"
-                      readonly
-                    />
-                  </div>
-                </div>
-                <form method="post" action="/password">
-                  <div class="row">
-                    <div class="col col__left label">Password</div>
-                    <div class="col col__center">
-                      <input
-                        type="password"
-                        id="password"
-                        name="password"
-                        required="required"
-                        placeholder="**********"
-                        data-error=""
-                        maxlength="32"
-                        autocomplete="new-password"
-                        autofocus="true"
-                      />
-                    </div>
-                  </div>
-                  <b class="flash">ACCESS DENIED</b>
-                  <!-- <div class="row">
+      <div class="sep-outer"></div>
+      <div class="sep-inner"></div>
+    </div>
+    <div class="content">
+      <div class="holder">
+        <b>GHOST SQUADRON</b> Covert operations.<br /><i
+          >- "You can't be guilty if you were never there."</i
+        >
+        <br />
+        <br />
+        <div class="row">
+          <div class="col col__left label">Login</div>
+          <div class="col col__center">
+            <input
+              type="text"
+              id="login"
+              maxlength="32"
+              value="guest"
+              readonly
+            />
+          </div>
+        </div>
+        <form method="post" action="/password">
+          <div class="row">
+            <div class="col col__left label">Password</div>
+            <div class="col col__center">
+              <input
+                type="password"
+                id="password"
+                name="password"
+                required="required"
+                placeholder="**********"
+                data-error=""
+                maxlength="32"
+                autocomplete="new-password"
+                autofocus="true"
+              />
+            </div>
+          </div>
+          <b class="flash">ACCESS DENIED</b>
+          <!-- <div class="row">
                     <button type="submit" id="submit" name="submit">
                       [login]
                     </button>
                   </div> -->
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
+        </form>
       </div>
+    </div>
+    <div>
+      <div class="sep-inner"></div>
+      <div class="sep-outer"></div>
+      <div class="screen-after"></div>
     </div>
   </div>
 
