--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,17 @@
   />
 
   <!-- Primary Meta Tags -->
-  <title>Ghost Squadron</title>
-  <meta name="title" content="Ghost Squadron" />
-  <meta
-    name="description"
-    content="The home of the Ghost Squadron Star Citizen Org."
-  />
+  <title>GSAG</title>
+  <meta name="title" content="GSAG" />
+  <meta name="description" content="The home of the GSAG Star Citizen Org." />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ghostsquadron.space/" />
-  <meta property="og:title" content="Ghost Squadron" />
+  <meta property="og:title" content="GSAG" />
   <meta
     property="og:description"
-    content="The home of the Ghost Squadron Star Citizen Org."
+    content="The home of the GSAG Star Citizen Org."
   />
   <meta property="og:image" content="https://ghostsquadron.space/meta.jpg" />
   <meta property="fb:app_id" content="966242223397117" />
@@ -26,10 +23,10 @@
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://ghostsquadron.space/" />
-  <meta property="twitter:title" content="Ghost Squadron" />
+  <meta property="twitter:title" content="GSAG" />
   <meta
     property="twitter:description"
-    content="The home of the Ghost Squadron Star Citizen Org."
+    content="The home of the GSAG Star Citizen Org."
   />
   <meta
     property="twitter:image"
@@ -41,73 +38,28 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#333333" />
-  <meta name="msapplication-TileColor" content="#b91d47" />
-  <meta name="theme-color" content="#333333" />
+  <meta name="msapplication-TileColor" content="#000000" />
+  <meta name="theme-color" content="#000000" />
 
   <link rel="stylesheet" href="/css/main.css" />
-  <link rel="stylesheet" href="/css/loading.css" />
-  <link rel="stylesheet" href="/css/login.css" />
+  <script type="text/javascript" src="/js/main.js"></script>
 </head>
 <body>
-  <hr class="top-hr" />
-  <div class="container on">
-    <div>
-      <h3 class="title">CONNECTION ESTABLISHED</h3>
-      <div class="sep-outer"></div>
-      <div class="sep-inner"></div>
-    </div>
-    <div class="content">
-      <div class="holder">
-        <b>GHOST SQUADRON</b> Covert operations.<br /><i
-          >- "You can't be guilty if you were never there."</i
-        >
-        <br />
-        <br />
-        <div class="row">
-          <div class="col col__left label">Login</div>
-          <div class="col col__center">
-            <input
-              type="text"
-              id="login"
-              maxlength="32"
-              value="guest"
-              readonly
-            />
-          </div>
-        </div>
-        <form method="post" action="/password">
-          <div class="row">
-            <div class="col col__left label">Password</div>
-            <div class="col col__center">
-              <input
-                type="password"
-                id="password"
-                name="password"
-                required="required"
-                placeholder="**********"
-                data-error=""
-                maxlength="32"
-                autocomplete="new-password"
-                autofocus="true"
-              />
-            </div>
-          </div>
-          <b class="flash">ACCESS DENIED</b>
-          <!-- <div class="row">
-                    <button type="submit" id="submit" name="submit">
-                      [login]
-                    </button>
-                  </div> -->
-        </form>
-      </div>
-    </div>
-    <div>
-      <div class="sep-inner"></div>
-      <div class="sep-outer"></div>
-      <div class="screen-after"></div>
-    </div>
+  <div class="left-menu">
+    <img src="/images/top_left.png" />
+    <img class="blue-image-bloom" src="/images/top_left_screen.png" />
+    <ul id="left-menu-list">
+      <li class="left-menu-item" onclick="home();"></li>
+      <li class="left-menu-item" onclick="about();"></li>
+      <li class="left-menu-item"></li>
+      <li class="left-menu-item"></li>
+      <li
+        class="left-menu-item"
+        onclick='window.open("https://robertsspaceindustries.com/orgs/GSAG", "_blank")'
+      ></li>
+      <li class="left-menu-item" onclick="turnOff();"></li>
+    </ul>
   </div>
-
-  <hr class="bot-hr" />
-  <script src="/js/loading.js"></script>
+  <div class="background"></div>
+  <div class="container on"></div>
 </body>
