--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,37 +4,34 @@
   <div class="sep-outer"></div>
   <div class="sep-inner"></div>
 </div>
-<span
-  style="max-width: 60vw; margin: 100px auto 100px auto; overflow-y: scroll"
->
-  The organization, named the "Ghost Squad," was formed by a group of former
-  military and mercenary personnel who were disillusioned with the corrupt and
-  inefficient systems of the United Empire of Earth (UEE). They saw piracy as a
-  means to acquire the resources and wealth necessary to fund their own
-  operations and achieve their goals of creating a new, more just society in the
-  stars.
+<span class="about-content">
+  The organization, named the "Ghost Squadron - Air and Ground" (GSAG) was
+  formed by a group of former military and mercenary personnel who were
+  disillusioned with the corrupt and inefficient systems of the United Empire of
+  Earth (UEE). They saw piracy as a means to acquire the resources and wealth
+  necessary to fund their own operations and achieve their goals of creating a
+  new, more just society in the stars.
   <br /><br />
-  The Ghost Squad operates as a loosely organized network of independent cells,
-  each with its own leader and agenda. Some cells engage in acts of piracy,
-  hijacking ships and raiding cargo to acquire the resources and technology
-  necessary for their goals. Others provide support and protection to the pirate
-  cells, using their expertise in tactics, technology, and espionage to
-  outmaneuver UEE forces.
+  GSAG operates as a loosely organized network of independent cells, each with
+  its own leader and agenda. Some cells engage in acts of piracy, hijacking
+  ships and raiding cargo to acquire the resources and technology necessary for
+  their goals. Others provide support and protection to the pirate cells, using
+  their expertise in tactics, technology, and espionage to outmaneuver UEE
+  forces.
   <br /><br />
-  Despite their criminal activities, the Ghost Squad has gained a significant
-  following among those who see them as a symbol of resistance against the
-  oppressive UEE. The Collective is also known for its code of honor, which
-  requires its members to treat their hostages humanely and to never attack
-  civilian targets.
+  Despite their criminal activities, GSAG has gained a significant following
+  among those who see them as a symbol of resistance against the oppressive UEE.
+  The Collective is also known for its code of honor, which requires its members
+  to treat their hostages humanely and to never attack civilian targets.
   <br /><br />
-  The UEE has declared war on the Ghost Squad, and the two sides are locked in a
-  brutal struggle for control of the galaxy. With their superior technology and
+  The UEE has declared war on GSAG, and the two sides are locked in a brutal
+  struggle for control of the galaxy. With their superior technology and
   resources, the UEE has the upper hand, but the Collective's cunning and
   tenacity make them a formidable adversary.
   <br /><br />
-  As the war rages on, the Ghost Squad continues to attract new members and gain
-  support, cementing its status as one of the most feared and respected
-  organizations in the galaxy.
+  As the war rages on, GSAG continues to attract new members and gain support,
+  cementing its status as one of the most feared and respected organizations in
+  the galaxy.
 </span>
 <div>
   <div class="sep-inner"></div>
