--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -6,20 +6,20 @@
 </div>
 <div class="content">
   <div class="holder">
-    <b>GSAG</b>: Covert operations.<br /><i
+    <b>GSAG</b>: Covert operations<br /><i
       >- "You can't be guilty if you were never there."</i
     >
     <br />
     <br />
     <div class="row">
-      <div class="col col__left label">Username</div>
+      <div class="col col__left label">username</div>
       <div class="col col__center">
         <input class="form-input" id="username" type="text" maxlength="32" />
       </div>
     </div>
     <form action="https://discord.gg/cZq2gEvZAb" target="_blank">
       <div class="row">
-        <div class="col col__left label">Password</div>
+        <div class="col col__left label">password</div>
         <div class="col col__center">
           <input
             class="form-input"
@@ -34,7 +34,12 @@
       </div>
       <!-- <b class="flash">ACCESS DENIED</b> -->
       <div class="row">
-        <button class="submit" type="button" id="login" onclick="openMenu();">
+        <button
+          class="submit"
+          type="button"
+          id="login"
+          onclick="openMenuFirst();"
+        >
           [login]</button
         ><button class="submit" type="submit" name="submit">[enlist]</button>
       </div>
