temporarily disabled "squadron" and "operations"

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
       <li class="left-menu-item hidden" onclick="changePage(this, 'about');">
         about
       </li>
-      <li class="left-menu-item hidden">squadrons</li>
-      <li class="left-menu-item hidden">operations</li>
+      <li class="left-menu-item temp-disabled hidden">squadrons</li>
+      <li class="left-menu-item temp-disabled hidden">operations</li>
       <li
         class="left-menu-item hidden"
         onclick='window.open("https://robertsspaceindustries.com/orgs/GSAG", "_blank")'
